--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,13 @@
 :root {
 	--color-bg: #1c2518;
 	--color-secondary: #b5f895;
-	--color-text: #fff;
+	--color-text: #ffffff;
+	--color-title: #ffffffaf;
 	--color-white: #fff;
 	--color-bg-bento: #31392d;
 	--color-bento-shadow: #1c2518;
 }
-
+/* COLOR EN DARK TEME GENERATOR #63f02b */
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap"); */
 
 body {
@@ -50,6 +51,18 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 2rem;
+}
+
+.year-percentage__title,
+.life-calc__title {
+	color: var(--color-title);
+	font-size: 1rem;
+	display: flex;
+	justify-content: center;
+}
+
+.year-span {
+	margin-right: 0.3rem;
 }
 
 .year-percentage__circle {
@@ -100,8 +113,8 @@ svg {
 .year-percentage__description {
 	display: flex;
 	justify-content: center;
-	font-size: 1.3rem;
-	font-weight: 300;
+	font-size: 1rem;
+	/* font-weight: ; */
 }
 
 /* REFLEXION */
@@ -130,9 +143,29 @@ svg {
 select {
 	background-color: transparent;
 	border: none;
-	font-size: 1.3rem;
+	font-size: 1rem;
+	margin-bottom: 1rem;
+	text-decoration: underline;
+
+	/* TEST */
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	/* Agrega estilos para el icono de Font Awesome */
 }
 
 label {
-	font-size: 1.3rem;
+	font-size: 1rem;
+}
+
+.footer__container {
+	display: flex;
+	font-size: 1rem;
+}
+
+.footer__description {
+	color: var(--color-text);
+}
+.footer_name {
+	color: var(--color-secondary);
 }
